# BB8

BB-8_Dome_Actuation/: CMakeLists.txt  Calibration.ods  main.cpp
BB-8_Dome_Actuation/include/: Calibration.h  Common.h  Control.h  DomeMixer.h  MPU6050.h  Mapping.h  Servo.h
BB-8_Dome_Actuation/src/: Calibration.cpp  Common.cpp  Control.cpp  DomeMixer.cpp  MPU6050.cpp  Servo.cpp  main.cpp
Ball_Actuation/: CMakeLists.txt
Ball_Actuation/include/: A4988.h
Ball_Roll/src/: A4988.cpp
Ball_Roll_Servo/: CMakeLists.txt
Ball_Roll_Servo/Reference/: README.txt
Ball_Roll_Servo/include/: btController.h  servoController.h  tiltController.h
Ball_Roll_Servo/src/: MPU6050.cpp  btController.cpp  main.cpp  servoController.cpp  tiltController.cpp
Ball_Roll_Servo/src/btstack/: spp_counter.c  spp_streamer.c
Ball_Roll_Stepper/include/: Common.h
Ball_Roll_Stepper/src/: main.cpp
Ball_Tilt/: CMakeLists.txt
Ball_Tilt/include/: Common.h  DemandInput.h  Encoder.h  MotorDriver.h  Pot.h  btController.h
Ball_Tilt/src/: DemandInput.cpp  Encoder.cpp  MotorDriver.cpp  Pot.cpp  btController.cpp  main.cpp
Common/include/: Common.h  MPU6050.h  btController.h
Common/src/: Common.cpp  MPU6050.cpp  btController.cpp
Controller/: .gitignore  BallMixer.py  GameController.py  ballMixerTest.py  controller.py
Dome_Actuation/: CMakeLists.txt
Dome_Actuation/include/: Common.h  Control.h  DomeMixer.h  Easings.h  LynxMotionPort.h  LynxMotionServo.h  LynxMotionVars.h  MPU6050.h  Servo.h  btstack_config.h  lwipopts.h
Dome_Actuation/src/: Common.cpp  Control.cpp  DomeMixer.cpp  LynxMotionPort.cpp  LynxMotionServo.cpp  Mapping.cpp  main.cpp  main_pico.cpp
Veroboards/: BB8_Ball_Drive_Servo.per  BB8_Ball_Drive_Step.per  BB8_Dome_Actuation.per  BB8_Linear_Actuator.per
